--- a/Suns/macros.tex
+++ b/Suns/macros.tex
@@ -27,6 +27,8 @@
 \newcommand{\diota}{\dot{\iota}}
 \newcommand{\Log}{\operatorname{Log}}
 \newcommand{\id}{\text{\textbf{id}}}
+\newcommand{\inverselimit}{\varprojlim} 
+\newcommand{\directlimit}{\varinjlim}
 \usepackage{amsmath}
 
 
